# Medical-intervention-text-classification

./: .gitignore  README.md  REPRODUCING.md  cohen_benchmark_analysis.md  pyproject.toml  requirements.txt
data/: README.md
docs/: Cohen_BERT_Extension_Results_Consolidation_v4.md  Context_Update_188.md
notebooks/: cohen_bert_audit.ipynb  cohen_bert_multiseed.ipynb
outputs/: analysis_results_full_v2.json  audit_comparison.json  bert_adhd_abstract_seed42.json  bert_adhd_abstract_seed42.txt  bert_adhd_auto_mesh_seed42.json  bert_adhd_auto_mesh_seed42.txt  bert_adhd_multiseed_summary.json  bert_adhd_title_abstract_mesh_seed42.json  bert_adhd_title_abstract_mesh_seed42.txt  bert_adhd_title_abstract_seed42.json  bert_adhd_title_abstract_seed42.txt  bert_opiods_abstract_seed42.json  bert_opiods_abstract_seed42.txt  bert_opiods_auto_mesh_seed42.json  bert_opiods_auto_mesh_seed42.txt  bert_opiods_multiseed_summary.json  bert_opiods_title_abstract_mesh_seed42.json  bert_opiods_title_abstract_mesh_seed42.txt  bert_opiods_title_abstract_seed42.json  bert_opiods_title_abstract_seed42.txt  bert_per_fold_bootstrap.json  bert_statins_abstract_seed42.json  bert_statins_abstract_seed42.txt  bert_statins_auto_mesh_seed13.json  bert_statins_auto_mesh_seed13.txt  bert_statins_auto_mesh_seed21.json  bert_statins_auto_mesh_seed21.txt  bert_statins_auto_mesh_seed31.json  bert_statins_auto_mesh_seed31.txt  bert_statins_auto_mesh_seed42.json  bert_statins_auto_mesh_seed42.txt  bert_statins_auto_mesh_seed7.json  bert_statins_auto_mesh_seed7.txt  bert_statins_multiseed_summary.json  (+39 more)
(+68 files in other folders)
